# pr2_sith

./: CHANGELOG.rst  CMakeLists.txt  duel_auto.launch  duel_core.launch  duel_no_setup.launch  duel_with_setup.launch  manifest.xml  package.xml  pr2_sith.app  stack.xml
cfg/: .gitignore  TheForce.cfg
deprecated/: teleop.py
scripts/: attack1.yaml  attack2.yaml  attack3.yaml  attack4.yaml  attack5.yaml  attack6.yaml  full_swing1.yaml  start1.yaml  start2.yaml  start3.yaml  start4.yaml  start5.yaml  start6.yaml  swing1.yaml  swing2.yaml
src/: .gitignore  duel.py  test_swings.py
