<package>
  <name>pr2_sith</name>
  <version>1.0.0</version>
  <description>An extension of the PR2 props demo, but instead of high fives, the PR2 swings a lightsaber until it detects an impact.</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2_sith</url>
  <!-- <url type="bugtracker"></url> -->

  <author>David V. Lu!!</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>pr2_controllers_msgs</build_depend>
  <build_depend>pr2_gripper_sensor_action</build_depend>
  <build_depend>pr2_gripper_sensor_controller</build_depend>
  <build_depend>pr2_gripper_sensor_msgs</build_depend>
  <build_depend>pr2_precise_trajectory</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rospy</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>pr2_controllers_msgs</run_depend>
  <run_depend>pr2_gripper_sensor_action</run_depend>
  <run_depend>pr2_gripper_sensor_controller</run_depend>
  <run_depend>pr2_gripper_sensor_msgs</run_depend>
  <run_depend>pr2_precise_trajectory</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>actionlib</test_depend> -->
  <!-- <test_depend>pr2_controllers_msgs</test_depend> -->
  <!-- <test_depend>pr2_gripper_sensor_action</test_depend> -->
  <!-- <test_depend>pr2_gripper_sensor_controller</test_depend> -->
  <!-- <test_depend>pr2_gripper_sensor_msgs</test_depend> -->
  <!-- <test_depend>pr2_precise_trajectory</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>dynamic_reconfigure</test_depend> -->

</package>
